Add a bit of style and grunt work.

--- a/src/pages/partials/menu.html
+++ b/src/pages/partials/menu.html
@@ -1,3 +1,6 @@
-<ul>
-	<li><a href="/">Home</a></li>
-</ul>
+<nav>
+  <ul>
+    <li><a href="/request">Requests/Feedback</a></li>
+    <li><a href="/release-notes.html">Release Notes</a></li>
+  </ul>
+</nav>
