--- a/src/less/core.less
+++ b/src/less/core.less
@@ -1,1 +1,5 @@
-@import url(brand.less);
+@import url(normalize.less);
+@import url(grid.less);
+@import url(variables.less);
+@import url(icons.less);
+@import url(chrome.less);
